--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,10 @@
     <version>0.1-SNAPSHOT</version>
 
     <dependencies>
-
+      <dependency>
+        <groupId>org.json</groupId>
+        <artifactId>json</artifactId>
+        <version>20090211</version>
+      </dependency>
     </dependencies>
 </project>
