--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>url-client</groupId>
     <artifactId>url-client</artifactId>
-    <version>0.1</version>
+    <version>0.2-SNAPSHOT</version>
 
   <parent>
     <groupId>dk.statsbiblioteket.sbprojects</groupId>
