INFRA-4 Opret bitmag client project: Expanding pom with extra project information.

--- a/pom.xml
+++ b/pom.xml
@@ -1,16 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
+  <modelVersion>4.0.0</modelVersion>
 
-    <groupId>dk.statsbiblioteket.mediaplatform</groupId>
-    <artifactId>bitrepository-url-client</artifactId>
-    <version>0.3-SNAPSHOT</version>
+  <groupId>dk.statsbiblioteket.mediaplatform</groupId>
+  <artifactId>bitrepository-url-client</artifactId>
+  <version>0.3-SNAPSHOT</version>
 
   <parent>
     <groupId>dk.statsbiblioteket.sbprojects</groupId>
     <artifactId>sbprojects-parent</artifactId>
     <version>3</version>
   </parent>
+
+  <description>Used for statsbiblioteket.dk's Medieplatform. Initially for ingesting files in the bitrepository,
+    later also to retrieve files again.
+  </description>
+  <url>https://sbforge.org/display/BITMAG</url>
+
+  <organization>
+    <name>The State and University Library, The Royal Library and The State Archives, Denmark</name>
+    <url>http://statsbiblioteket.dk</url>
+  </organization>
 
   <repositories>
     <repository>
@@ -24,18 +34,84 @@
       </snapshots>
     </repository>
   </repositories>
-  
+
   <scm>
     <url>https://github.com/mikisseth/bitrepository-url-client</url>
     <connection>scm:git:git://github.com/mikisseth/bitrepository-url-client.git</connection>
     <developerConnection>scm:git:git@github.com:mikisseth/bitrepository-url-client.git</developerConnection>
   </scm>
 
-    <dependencies>
-      <dependency>
-        <groupId>org.json</groupId>
-        <artifactId>json</artifactId>
-        <version>20090211</version>
-      </dependency>
-    </dependencies>
+  <developers>
+    <developer>
+      <name>Mikis Seth Sørensen</name>
+      <email>mss@statsbiblioteket.dk</email>
+      <organization>The Danish State and University Library</organization>
+      <organizationUrl>http://en.statsbiblioteket.dk</organizationUrl>
+      <roles>
+        <role>Project Manager</role>
+      </roles>
+    </developer>
+    <developer>
+      <name>Kim Teglgaard Christensen   </name>
+      <email>ktc@statsbiblioteket.dk</email>
+      <organization>The Danish State and University Library</organization>
+      <organizationUrl>http://en.statsbiblioteket.dk</organizationUrl>
+      <roles>
+        <role>Developer</role>
+      </roles>
+    </developer>
+  </developers>
+
+  <inceptionYear>2012</inceptionYear>
+
+  <licenses>
+    <license>
+      <name>Apache 2</name>
+      <distribution>repo</distribution>
+      <url>http://www.gnu.org/licenses/lgpl-2.1.txt</url>
+    </license>
+  </licenses>
+
+  <issueManagement>
+    <system>JIRA</system>
+    <url>https://sbforge.org/jira/browse/BITMAG</url>
+  </issueManagement>
+
+  <ciManagement>
+    <system>Jenkins</system>
+    <url>https://sbforge.org/jenkins/</url>
+  </ciManagement>
+
+  <distributionManagement>
+    <site>
+      <id>sbforge-nexus</id>
+      <name>SBForge Maven site</name>
+      <url>dav:https://sbforge.org/maven/bitrepository/sites/reference/${project.version}</url>
+    </site>
+  </distributionManagement>
+
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>license-maven-plugin</artifactId>
+        <configuration>
+          <generateBundle>true</generateBundle>
+          <failIfWarning>true</failIfWarning>
+          <useMissingFile>true</useMissingFile>
+          <extraExtensions>
+            <xsd>xml</xsd>
+          </extraExtensions>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
+
+  <dependencies>
+    <dependency>
+      <groupId>org.json</groupId>
+      <artifactId>json</artifactId>
+      <version>20090211</version>
+    </dependency>
+  </dependencies>
 </project>
