--- a/url-put-client/pom.xml
+++ b/url-put-client/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>dk.statsbiblioteket.mediaplatform</groupId>
-  <artifactId>bitrepository-url-client</artifactId>
+  <artifactId>url-put-client</artifactId>
   <version>0.3-SNAPSHOT</version>
 
   <parent>
