--- a/httpresolver/pom.xml
+++ b/httpresolver/pom.xml
@@ -46,7 +46,7 @@
     </dependency>
   </dependencies>
 
- <build>
+  <build>
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
@@ -81,6 +81,16 @@
           </execution>
         </executions>
       </plugin>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>tomcat-maven-plugin</artifactId>
+        <configuration>
+          <url>http://localhost:8080/manager</url>
+          <username>maven-deploy</username>
+          <password>maven-deploy</password>
+          <warFile>target/httpresolver-${project.version}.war</warFile>
+        </configuration>
+      </plugin>
     </plugins>
- </build>
+  </build>
 </project>
