--- a/httpresolver/pom.xml
+++ b/httpresolver/pom.xml
@@ -46,6 +46,17 @@
     </dependency>
   </dependencies>
 
+  <profiles>
+    <profile>
+      <id>localTomcat</id>
+      <properties>
+        <tomcat.url>http://localhost:8080/manager</tomcat.url>
+        <tomcat.user>maven-deploy</tomcat.user>
+        <tomcat.pass>maven-deploy</tomcat.pass>
+      </properties>
+    </profile>
+  </profiles>
+
   <build>
     <plugins>
       <plugin>
@@ -85,9 +96,12 @@
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>tomcat-maven-plugin</artifactId>
         <configuration>
-          <url>http://localhost:8080/manager</url>
+          <!--  <url>http://localhost:8080/manager</url>
           <username>maven-deploy</username>
-          <password>maven-deploy</password>
+          <password>maven-deploy</password> -->
+          <url>${tomcat.url}</url>
+          <username>${tomcat.user}</username>
+          <password>${tomcat.pass}</password>
           <warFile>target/httpresolver-${project.version}.war</warFile>
         </configuration>
       </plugin>
