--- a/url-put-client/pom.xml
+++ b/url-put-client/pom.xml
@@ -1,13 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
     <groupId>dk.statsbiblioteket.mediaplatform</groupId>
     <artifactId>url-client</artifactId>
-    <version>0.3-SNAPSHOT</version>
+    <version>0.3</version>
   </parent>
   <artifactId>url-put-client</artifactId>
 
@@ -85,8 +83,7 @@
             <configuration>
               <tasks>
                 <!-- Using an ant task to deflate webinstaller.zip -->
-                <unzip src="${project.build.directory}/${project.name}-${project.version}-bundle.zip"
-                       dest="${project.build.directory}/deploy/"/>
+                <unzip src="${project.build.directory}/${project.name}-${project.version}-bundle.zip" dest="${project.build.directory}/deploy/" />
               </tasks>
             </configuration>
             <goals>
