--- a/pom.xml
+++ b/pom.xml
@@ -1,12 +1,12 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>dk.statsbiblioteket.mediaplatform</groupId>
-  <artifactId>bitrepository-url-client</artifactId>
+  <groupId>dk.statsbiblioteket.medieplatform</groupId>
+  <artifactId>yousee-bitrepository-ingester</artifactId>
   <version>0.4-SNAPSHOT</version>
   <packaging>pom</packaging>
 
-  <name>url-client</name>
+  <name>Yousee Bitrepository Ingester</name>
 
   <parent>
     <groupId>dk.statsbiblioteket.sbprojects</groupId>
@@ -14,9 +14,10 @@
     <version>3</version>
   </parent>
 
-  <description>Used for accessing fom the statsbiblioteket.dk's Medieplatform, to a Bit repository.
+  <description>Used for statsbiblioteket.dk's Medieplatform for ingesting files in the bit repository.
   </description>
-  <url>https://sbprojects.statsbiblioteket.dk/display/INFRA/Bitmagasin+klient</url>
+
+  <url>https://sbprojects.statsbiblioteket.dk/display/INFRA/Yoosee+Bitrepository+Ingester</url>
 
   <organization>
     <name>The State and University Library, Denmark</name>
@@ -34,6 +35,16 @@
         <enabled>true</enabled>
       </snapshots>
     </repository>
+    <repository>
+      <id>sbforge-nexus</id>
+      <url>https://sbforge.org/nexus/content/groups/public</url>
+      <releases>
+        <enabled>true</enabled>
+      </releases>
+      <snapshots>
+        <enabled>true</enabled>
+      </snapshots>
+    </repository>
   </repositories>
 
   <scm>
@@ -41,11 +52,6 @@
     <connection>scm:git:git://github.com/statsbiblioteket/bitrepository-url-client.git</connection>
     <developerConnection>scm:git:git@github.com:statsbiblioteket/bitrepository-url-client.git</developerConnection>
   </scm>
-
-  <modules>
-    <module>url-put-client</module>
-    <module>httpresolver</module>
-  </modules>
 
   <dependencies>
     <dependency>
@@ -63,31 +69,122 @@
       <artifactId>jcl-over-slf4j</artifactId>
       <version>${slf4j.version}</version>
     </dependency>
+    <dependency>
+      <groupId>org.json</groupId>
+      <artifactId>json</artifactId>
+      <version>20090211</version>
+    </dependency>
+    <dependency>
+      <groupId>org.bitrepository.reference</groupId>
+      <artifactId>bitrepository-core</artifactId>
+      <version>${bitrepository-version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.bitrepository.reference</groupId>
+      <artifactId>bitrepository-modifying-client</artifactId>
+      <version>${bitrepository-version}</version>
+    </dependency>
 
+    <!--  Test dependencies -->
+    <dependency>
+      <groupId>org.bitrepository.reference</groupId>
+      <artifactId>bitrepository-core</artifactId>
+      <version>${bitrepository-version}</version>
+      <type>test-jar</type>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.bitrepository.reference</groupId>
+      <artifactId>bitrepository-modifying-client</artifactId>
+      <version>${bitrepository-version}</version>
+      <type>test-jar</type>
+      <scope>test</scope>
+    </dependency>
     <dependency>
       <groupId>org.testng</groupId>
       <artifactId>testng</artifactId>
       <version>6.5.2</version>
       <scope>test</scope>
-
+    </dependency>
+    <!--  Transitive test dependencies -->
+    <dependency>
+      <groupId>org.jaccept</groupId>
+      <artifactId>jaccept-gui</artifactId>
+      <version>0.2</version>
+      <scope>test</scope>
+      <exclusions>
+        <exclusion>
+          <artifactId>testng</artifactId>
+          <groupId>org.testng</groupId>
+        </exclusion>
+      </exclusions>
     </dependency>
   </dependencies>
 
   <build>
     <pluginManagement>
       <plugins>
-            <plugin>
-              <groupId>org.codehaus.mojo</groupId>
-              <artifactId>license-maven-plugin</artifactId>
+        <plugin>
+          <artifactId>maven-assembly-plugin</artifactId>
+          <version>2.3</version>
+          <configuration>
+            <descriptors>
+              <descriptor>src/main/assembly/assembly.xml</descriptor>
+            </descriptors>
+            <attach>true</attach>
+          </configuration>
+          <executions>
+            <execution>
+              <id>make-assembly</id>
+              <phase>package</phase>
+              <goals>
+                <goal>single</goal>
+              </goals>
+            </execution>
+          </executions>
+        </plugin>
+        <plugin>
+          <artifactId>maven-antrun-plugin</artifactId>
+          <version>1.7</version>
+          <executions>
+            <execution>
+              <phase>pre-integration-test</phase>
               <configuration>
-                <generateBundle>true</generateBundle>
-                <failIfWarning>true</failIfWarning>
-                <useMissingFile>true</useMissingFile>
-                <extraExtensions>
-                  <xsd>xml</xsd>
-                </extraExtensions>
+                <tasks>
+                  <!-- Using an ant task to deflate webinstaller.zip -->
+                  <unzip src="${project.build.directory}/${project.name}-${project.version}-bundle.zip" dest="${project.build.directory}/deploy/" />
+                </tasks>
               </configuration>
-            </plugin>
+              <goals>
+                <goal>run</goal>
+              </goals>
+            </execution>
+          </executions>
+        </plugin>
+        <plugin>
+          <artifactId>maven-failsafe-plugin</artifactId>
+          <version>2.12</version>
+          <executions>
+            <execution>
+              <goals>
+                <goal>integration-test</goal>
+                <goal>verify</goal>
+              </goals>
+            </execution>
+          </executions>
+        </plugin>
+        <plugin>
+          <groupId>org.codehaus.mojo</groupId>
+          <artifactId>license-maven-plugin</artifactId>
+          <configuration>
+            <generateBundle>true</generateBundle>
+            <failIfWarning>true</failIfWarning>
+            <useMissingFile>true</useMissingFile>
+            <extraExtensions>
+              <xsd>xml</xsd>
+            </extraExtensions>
+          </configuration>
+        </plugin>
         <!--This plugin's configuration is used to store Eclipse m2e settings 
           only. It has no influence on the Maven build itself. -->
         <plugin>
@@ -117,7 +214,7 @@
       </plugins>
     </pluginManagement>
   </build>
-  
+
   <properties>
     <endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
