--- a/pom.xml
+++ b/pom.xml
@@ -94,6 +94,13 @@
     </dependency>
     <dependency>
       <groupId>org.bitrepository.reference</groupId>
+      <artifactId>bitrepository-client</artifactId>
+      <version>${bitrepository-version}</version>
+      <type>test-jar</type>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.bitrepository.reference</groupId>
       <artifactId>bitrepository-modifying-client</artifactId>
       <version>${bitrepository-version}</version>
       <type>test-jar</type>
@@ -197,7 +204,7 @@ only. It has no influence on the Maven build itself. -->
   <properties>
     <endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <bitrepository-version>0.14.2</bitrepository-version>
+    <bitrepository-version>0.19.1</bitrepository-version>
     <slf4j.version>1.6.4</slf4j.version>
   </properties>
 
