--- a/pom.xml
+++ b/pom.xml
@@ -198,13 +198,21 @@ only. It has no influence on the Maven build itself. -->
           </lifecycleMappingMetadata>
         </configuration>
       </plugin>
+      <plugin>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>2.3.2</version>
+        <configuration>
+          <source>1.6</source>
+          <target>1.6</target>
+        </configuration>
+      </plugin>
     </plugins>
   </build>
 
   <properties>
     <endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <bitrepository-version>0.19.1</bitrepository-version>
+    <bitrepository-version>0.22</bitrepository-version>
     <slf4j.version>1.6.4</slf4j.version>
   </properties>
 
