--- a/pom.xml
+++ b/pom.xml
@@ -80,7 +80,7 @@
     </dependency>
     <dependency>
       <groupId>org.bitrepository.reference</groupId>
-      <artifactId>bitrepository-modifying-client</artifactId>
+      <artifactId>bitrepository-client</artifactId>
       <version>${bitrepository-version}</version>
     </dependency>
 
@@ -95,13 +95,6 @@
     <dependency>
       <groupId>org.bitrepository.reference</groupId>
       <artifactId>bitrepository-client</artifactId>
-      <version>${bitrepository-version}</version>
-      <type>test-jar</type>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.bitrepository.reference</groupId>
-      <artifactId>bitrepository-modifying-client</artifactId>
       <version>${bitrepository-version}</version>
       <type>test-jar</type>
       <scope>test</scope>
@@ -202,8 +195,8 @@ only. It has no influence on the Maven build itself. -->
         <artifactId>maven-compiler-plugin</artifactId>
         <version>2.3.2</version>
         <configuration>
-          <source>1.6</source>
-          <target>1.6</target>
+          <source>1.8</source>
+          <target>1.8</target>
         </configuration>
       </plugin>
     </plugins>
@@ -212,7 +205,7 @@ only. It has no influence on the Maven build itself. -->
   <properties>
     <endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <bitrepository-version>0.22</bitrepository-version>
+    <bitrepository-version>1.7.0.1</bitrepository-version>
     <slf4j.version>1.6.4</slf4j.version>
   </properties>
 
