--- a/pom.xml
+++ b/pom.xml
@@ -105,6 +105,12 @@
       <version>6.5.2</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-core</artifactId>
+      <version>1.9.5</version>
+      <scope>test</scope>
+    </dependency>
     <!--  Transitive test dependencies -->
     <dependency>
       <groupId>org.jaccept</groupId>
