--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
   <groupId>dk.statsbiblioteket.medieplatform</groupId>
   <artifactId>yousee-bitrepository-ingester</artifactId>
-  <version>1.0</version>
+  <version>1.1-SNAPSHOT</version>
 
   <name>Yousee Bitrepository Ingester</name>
 
@@ -50,7 +50,7 @@
     <url>https://github.com/statsbiblioteket/youseebitrepositoryingester</url>
     <connection>scm:git:git://github.com/statsbiblioteket/youseebitrepositoryingester.git</connection>
     <developerConnection>scm:git:git@github.com:statsbiblioteket/youseebitrepositoryingester.git</developerConnection>
-    <tag>yousee-bitrepository-ingester-1.0</tag>
+    <tag>HEAD</tag>
   </scm>
 
   <dependencies>
